@@ -1,25 +1,24 @@
-# File: p_hist.txt
+# File: h_info.txt
 
 
-# This file is used to initialize the "lib/data/p_hist.raw" file, which is
+# This file is used to initialize the "lib/data/h_info.raw" file, which is
 # used to initialize the "player history" information for the Angband game.
 
 # Do not modify this file unless you know exactly what you are doing,
 # unless you wish to risk possible system crashes and broken savefiles.
-# After modifying this file, delete the "lib/data/p_hist.raw" file.
+# After modifying this file, delete the "lib/data/h_info.raw" file.
 
 # Background information (see below)
 
 # Chart progression by race:
 #   Human/Dunadan -->  1 -->  2 -->  3 --> 50 --> 51 --> 52 --> 53
 #   Half-Elf      -->  4 -->  1 -->  2 -->  3 --> 50 --> 51 --> 52 --> 53
-#   Elf           -->  5 -->  6 -->  9 --> 54 --> 55 --> 56
-#   High-Elf      -->  7 -->  8 -->  9 --> 54 --> 55 --> 56
+#   Elf/High-Elf  -->  7 -->  8 -->  9 --> 54 --> 55 --> 56
 #   Hobbit        --> 10 --> 11 -->  3 --> 50 --> 51 --> 52 --> 53
 #   Gnome         --> 13 --> 14 -->  3 --> 50 --> 51 --> 52 --> 53
 #   Dwarf         --> 16 --> 17 --> 18 --> 57 --> 58 --> 59 --> 60 --> 61
 #   Half-Orc      --> 19 --> 20 -->  2 -->  3 --> 50 --> 51 --> 52 --> 53
-#   Half-Troll    --> 21 --> 22 --> 62 --> 63 --> 64 --> 65 --> 66
+#   Half-Troll    --> 22 --> 23 --> 62 --> 63 --> 64 --> 65 --> 66
 #   Quickling     --> 24 --> 25 --> 50 --> 51 --> 52 --> 53
 #   Half-Demon    --> 26 --> 67 --> 68 --> 69
 
@@ -30,7 +29,7 @@
 
 # Version stamp (required)
 
-V:2.9.7
+V:12.9.1
 
 
 N:1:2:10:25
@@ -64,34 +63,18 @@ D:You are a credit to the family.
 N:3:50:100:60
 D:You are a well liked child.  
 
-N:4:1:15:40
-D:Your mother was of the Avari. 
-N:4:1:30:45
-D:Your father was of the Avari. 
-N:4:1:50:50
-D:Your mother was of the Nandor. 
-N:4:1:70:55
-D:Your father was of the Nandor.  
-N:4:1:85:60
-D:Your mother was of the Sindar.  
-N:4:1:95:65
-D:Your father was of the Sindar.  
-N:4:1:98:70
+N:4:1:40:50
+D:Your mother was of the Teleri.  
+N:4:1:75:55
+D:Your father was of the Teleri.  
+N:4:1:90:55
 D:Your mother was of the Noldor.  
-N:4:1:100:75
+N:4:1:95:60
 D:Your father was of the Noldor.  
-
-N:5:6:60:50
-D:You are one of several children 
-N:5:6:100:55
-D:You are the only child 
-
-N:6:9:40:40
-D:of an Avarin 
-N:6:9:70:50
-D:of a Nandorin 
-N:6:9:100:60
-D:of a Sindarin 
+N:4:1:98:65
+D:Your mother was of the Vanyar.  
+N:4:1:100:70
+D:Your father was of the Vanyar.  
 
 N:7:8:60:50
 D:You are one of several children 
@@ -99,11 +82,11 @@ N:7:8:100:55
 D:You are the only child 
 
 N:8:9:75:50
-D:of a Telerin 
+D:of a Teleri 
 N:8:9:95:55
-D:of a Noldorin 
+D:of a Noldor 
 N:8:9:100:60
-D:of a Vanyarin 
+D:of a Vanyar 
 
 N:9:54:40:80
 D:Ranger.  
@@ -124,19 +107,19 @@ N:10:11:100:55
 D:You are the only child of a Hobbit 
 
 N:11:3:20:55
-D:Burglar.  
+D:Bum.  
 N:11:3:30:80
-D:Miller.  
-N:11:3:40:90
 D:Tavern Owner.  
+N:11:3:40:90
+D:Miller.  
 N:11:3:50:100
-D:Archer.  
+D:Home Owner.  
 N:11:3:80:110
-D:Warrior.  
+D:Burglar.  
 N:11:3:95:115
-D:Shirriff.  
+D:Warrior.  
 N:11:3:99:125
-D:Mayor.  
+D:Mage.  
 N:11:3:100:140
 D:Clan Elder.  
 
@@ -182,112 +165,110 @@ N:18:57:100:55
 D:You are a well liked child.  
 
 N:19:20:25:25
-D:Your mother was an Orc, 
+D:Your mother was an Orc, but it is unacknowledged.  
 N:19:20:100:25
-D:Your father was an Orc, 
+D:Your father was an Orc, but it is unacknowledged.  
 
-N:20:2:20:30
-D:and it is acknowledged. You are the adopted child 
 N:20:2:100:50
-D:but it is unacknowledged. You are the adopted child 
+D:You are the adopted child 
 
-N:21:22:30:20
-D:Your mother was a Stone-Troll 
-N:21:22:60:25
-D:Your father was a Stone-Troll 
-N:21:22:75:30
+N:22:23:30:20
 D:Your mother was a Cave-Troll 
-N:21:22:90:35
+N:22:23:60:25
 D:Your father was a Cave-Troll 
-N:21:22:95:40
+N:22:23:75:30
+D:Your mother was a Hill-Troll 
+N:22:23:90:35
+D:Your father was a Hill-Troll 
+N:22:23:95:40
 D:Your mother was a Water-Troll 
-N:21:22:100:45
+N:22:23:100:45
 D:Your father was a Water-Troll 
 
-N:22:62:5:60
+N:23:62:5:60
 D:Cook.  
-N:22:62:95:55
+N:23:62:95:55
 D:Warrior.  
-N:22:62:99:65
+N:23:62:99:65
 D:Shaman.  
-N:22:62:100:80
-D:Clan Chief.
+N:23:62:100:80
+D:Clan Chief.  
 
 N:24:25:80:50
-D:You are one of several children
+D:You are one of several children 
 N:24:25:100:60
-D:You are the only child
+D:You are the only child 
 
 N:25:50:60:90
-D:of a Forest Quickling.
+D:of a Forest Quickling.  
 N:25:50:80:100
-D:of a Village Quickling.
+D:of a Village Quickling.  
 N:25:50:95:110
-D:of a River Quickling.
+D:of a River Quickling.  
 N:25:50:99:120
-D:of a High Quickling.
+D:of a High Quickling.  
 N:25:50:100:150
-D:of a Quickling Lord.
+D:of a Quickling Lord.  
 
 N:26:67:15:25
-D:Your father was a Manes.
+D:Your father was a Manes.  
 N:26:67:30:35
-D:Your father was an Imp.
+D:Your father was an Imp.  
 N:26:67:40:45
-D:Your father was a Bodak.
+D:Your father was a Bodak.  
 N:26:67:50:55
-D:Your mother was an Erinyes.
+D:Your mother was an Erinyes.  
 N:26:67:60:60
-D:Your father was a Vrock.
+D:Your father was a Vrock.  
 N:26:67:70:65
-D:Your father was a Hezrou.
+D:Your father was a Hezrou.  
 N:26:67:80:70
-D:Your father was a Glabrezu.
+D:Your father was a Glabrezu.  
 N:26:67:85:80
-D:Your father was a Nalfeshnee.
+D:Your father was a Nalfeshnee.  
 N:26:67:90:100
-D:Your mother was a Marilith.
+D:Your mother was a Marilith.  
 N:26:67:94:120
-D:Your father was a Lesser Balrog.
+D:Your father was a Lesser Balrog.  
 N:26:67:97:140
-D:Your father was Draebor, the Imp.
+D:Your father was Draebor, the Imp. 
 N:26:67:98:160
-D:Your father was Muar, the Balrog.
+D:Your father was Muar, the Balrog.  
 N:26:67:99:180
-D:Your father was Lungorthin, the Balrog of White Fire.
+D:Your father was Lungorthin, the Balrog of White Fire.  
 N:26:67:100:200
-D:Your father was Gothmog, the High Captain of Balrogs.
+D:Your father was Gothmog, the High Captain of Balrogs.  
 
 N:50:51:20:50
-D:You have dark brown eyes,
+D:You have dark brown eyes, 
 N:50:51:60:50
-D:You have brown eyes,
+D:You have brown eyes, 
 N:50:51:70:50
-D:You have hazel eyes,
+D:You have hazel eyes, 
 N:50:51:80:50
-D:You have green eyes,
+D:You have green eyes, 
 N:50:51:90:50
-D:You have blue eyes,
+D:You have blue eyes, 
 N:50:51:100:50
-D:You have blue-gray eyes,
+D:You have blue-gray eyes, 
 
 N:51:52:70:50
-D:straight
+D:straight 
 N:51:52:90:50
-D:wavy
+D:wavy 
 N:51:52:100:50
-D:curly
+D:curly 
 
 N:52:53:30:50
-D:black hair,
+D:black hair, 
 N:52:53:70:50
-D:brown hair,
+D:brown hair, 
 N:52:53:80:50
-D:auburn hair,
+D:auburn hair, 
 N:52:53:90:50
-D:red hair,
+D:red hair, 
 N:52:53:100:50
-D:blond hair,
+D:blond hair, 
 
 N:53:0:10:50
 D:and a very dark complexion.
@@ -301,16 +282,16 @@ N:53:0:100:50
 D:and a very fair complexion.
 
 N:54:55:85:50
-D:You have light grey eyes,
+D:You have light grey eyes, 
 N:54:55:95:50
-D:You have light blue eyes,
+D:You have light blue eyes, 
 N:54:55:100:50
-D:You have light green eyes,
+D:You have light green eyes, 
 
 N:55:56:75:50
-D:straight
+D:straight 
 N:55:56:100:50
-D:wavy
+D:wavy 
 
 N:56:0:75:50
 D:black hair, and a fair complexion.
@@ -322,63 +303,63 @@ N:56:0:100:50
 D:silver hair, and a fair complexion.
 
 N:57:58:99:50
-D:You have dark brown eyes,
-N:57:58:100:50
-D:You have glowing red eyes,
+D:You have dark brown eyes, 
+N:57:58:100:60
+D:You have glowing red eyes, 
 
 N:58:59:90:50
-D:straight
+D:straight 
 N:58:59:100:50
-D:wavy
+D:wavy 
 
 N:59:60:75:50
-D:black hair,
+D:black hair, 
 N:59:60:100:50
-D:brown hair,
+D:brown hair, 
 
-N:60:61:25:47
-D:a one foot beard,
-N:60:61:60:49
-D:a two foot beard,
-N:60:61:90:51
-D:a three foot beard,
-N:60:61:100:53
-D:a four foot beard,
+N:60:61:25:50
+D:a one foot beard, 
+N:60:61:60:51
+D:a two foot beard, 
+N:60:61:90:53
+D:a three foot beard, 
+N:60:61:100:55
+D:a four foot beard, 
 
 N:61:0:100:50
 D:and a dark complexion.
 
 N:62:63:60:50
-D:You have slime-green eyes,
+D:You have slime green eyes, 
 N:62:63:85:50
-D:You have puke-yellow eyes,
+D:You have puke yellow eyes, 
 N:62:63:99:50
-D:You have blue-bloodshot eyes,
+D:You have blue-bloodshot eyes, 
 N:62:63:100:55
-D:You have glowing red eyes,
+D:You have glowing red eyes, 
 
 N:63:64:33:50
-D:dirty
+D:dirty 
 N:63:64:66:50
-D:mangy
+D:mangy 
 N:63:64:100:50
-D:oily
+D:oily 
 
 N:64:65:33:50
-D:sea-weed green hair,
+D:sea-weed green hair, 
 N:64:65:66:50
-D:bright red hair,
+D:bright red hair, 
 N:64:65:100:50
-D:dark purple hair,
+D:dark purple hair, 
 
 N:65:66:25:50
-D:and green
+D:and green 
 N:65:66:50:50
-D:and blue
+D:and blue 
 N:65:66:75:50
-D:and white
+D:and white 
 N:65:66:100:50
-D:and black
+D:and black 
 
 N:66:0:33:50
 D:ulcerous skin.
@@ -388,20 +369,20 @@ N:66:0:100:50
 D:leprous skin.
 
 N:67:68:40:50
-D:You have brown eyes,
+D:You have brown eyes, 
 N:67:68:80:50
-D:You have yellow eyes,
+D:You have yellow eyes, 
 N:67:68:100:55
-D:You have glowing red eyes,
+D:You have glowing red eyes, 
 
 N:68:69:30:50
-D:brown hair,
+D:brown hair, 
 N:68:69:60:50
-D:dark hair,
+D:dark hair, 
 N:68:69:80:50
-D:orange hair,
+D:orange hair, 
 N:68:69:100:50
-D:red hair,
+D:red hair, 
 
 N:69:0:25:50
 D:and a pale complexion.
