@@ -2973,15 +2973,8 @@ static void get_history_borg(void)
 {
     int i, n, chart, roll, social_class;
 
-    char *s, *t;
-
-    char buf[240];
-
-
-
     /* Clear the previous history strings */
-    for (i = 0; i < 4; i++) p_ptr->history[i][0] = '\0';
-
+    p_ptr->history[0] = '\0';
 
     /* Clear the history text */
     buf[0] = '\0';
@@ -2991,7 +2984,6 @@ static void get_history_borg(void)
 
     /* Starting place */
     chart = rp_ptr->hist;
-
 
     /* Process the history */
     while (chart)
@@ -3006,7 +2998,7 @@ static void get_history_borg(void)
         while ((chart != h_info[i].chart) || (roll > h_info[i].roll)) i++;
 
         /* Get the textual history */
-        strcat(buf, (h_text + h_info[i].text));
+        strcat(p_ptr->history, (h_text + h_info[i].text));
 
         /* Add in the social class */
         social_class += (int)(h_info[i].bonus) - 50;
@@ -3015,8 +3007,6 @@ static void get_history_borg(void)
         chart = h_info[i].next;
     }
 
-
-
     /* Verify social class */
     if (social_class > 100) social_class = 100;
     else if (social_class < 1) social_class = 1;
@@ -3024,51 +3014,8 @@ static void get_history_borg(void)
     /* Save the social class */
     p_ptr->sc = social_class;
 
-
-    /* Skip leading spaces */
-    for (s = buf; *s == ' '; s++) /* loop */;
-
-    /* Get apparent length */
-    n = strlen(s);
-
-    /* Kill trailing spaces */
-    while ((n > 0) && (s[n-1] == ' ')) s[--n] = '\0';
-
-
-    /* Start at first line */
-    i = 0;
-
-    /* Collect the history */
-    while (TRUE)
-    {
-        /* Extract remaining length */
-        n = strlen(s);
-
-        /* All done */
-        if (n < 60)
-        {
-            /* Save one line of history */
-            strcpy(p_ptr->history[i++], s);
-
-            /* All done */
-            break;
-        }
-
-        /* Find a reasonable break-point */
-        for (n = 60; ((n > 0) && (s[n-1] != ' ')); n--) /* loop */;
-
-        /* Save next location */
-        t = s + n;
-
-        /* Wipe trailing spaces */
-        while ((n > 0) && (s[n-1] == ' ')) s[--n] = '\0';
-
-        /* Save one line of history */
-        strcpy(p_ptr->history[i++], s);
-
-        /* Start next line */
-        for (s = t; *s == ' '; s++) /* loop */;
-    }
+	/* We are done. */
+	return;
 }
 
 
